[package]
name = "feed_the_fed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
elefren = { version = "0.22", features=["toml"] }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

toml = "0.5"
serde = "1.0.137"

clap = { version = "3.0", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "feed_the_fed"
